@@ -7628,7 +7628,7 @@ sub read_am_file ($$)
 	elsif (/$WHITE_PATTERN/o)
 	{
 	    err $where, "blank line following trailing backslash"
-	      if $saw_bk;
+	      if $saw_bk && $prev_state != IN_COMMENT;
 	    # Stick a single white line before the incoming macro or rule.
 	    $spacing = "\n";
 	    $blank = 1;
@@ -7691,7 +7691,7 @@ sub read_am_file ($$)
 	    # Stick a single white line before the incoming macro or rule.
 	    $spacing = "\n";
 	    err $where, "blank line following trailing backslash"
-	      if $saw_bk;
+	      if $saw_bk && $prev_state != IN_COMMENT;
 	}
 	elsif (/$COMMENT_PATTERN/o)
 	{
