@@ -1,3 +1,11 @@
+2002-12-03  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	For PR automake/379:
+	* automake.in (read_am_file): Do not complain about backslashes
+	before blank lines when the backslash is in a comment.
+	* tests/Makefile.am (TESTS): Add comment8.test.
+	* tests/comment8.test: New file.
+
 2002-12-02  Charles Wilson  <cwilson@ece.gatech.edu>
 
 	* tests/gnits3.test (AM_INSTALLCHECK_STD_OPTIONS_EXEMPT):
